FIX | Buttons alignment review

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -260,6 +260,7 @@ nav {
   z-index: 1;
   position: fixed;
   top: 0;
+  padding-bottom: 5px;
 
 
   a {
@@ -2230,6 +2231,31 @@ input[type=range]:hover::-ms-track {
   .logo-link {
     display: none;
   }
+
+  .messages {
+
+    .maininfo {
+      flex-direction: row;
+      // flex-direction: row;
+      // margin-bottom: 0.2em;
+      // flex-wrap: wrap;
+      // div {
+      //   flex-wrap: wrap;
+      // }
+    }
+
+    .info{
+      flex-direction: row-reverse;
+      // display: none;
+      // flex-direction: row;
+      // display: none;
+      // flex-direction: row;
+      // flex-wrap: wrap;
+      padding-left: 8px;
+
+    }
+  }
+
 }
 
 @media (min-width:720px) {
